[gd_scene load_steps=7 format=3 uid="uid://m5yb5w1y6g0j"]

[ext_resource type="Script" uid="uid://gjxuow6pabwt" path="res://scenes/ui/pause_menu.gd" id="1_0lmf7"]
[ext_resource type="PackedScene" uid="uid://v7jxei0welef" path="res://scenes/ui/sound_button.tscn" id="2_f6eus"]

[sub_resource type="Animation" id="Animation_bd1lb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_eg2gl"]
resource_name = "in"
length = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_xpnye"]
resource_name = "out"
length = 0.18
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRectOverlay:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.166667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_k541j"]
_data = {
&"RESET": SubResource("Animation_bd1lb"),
&"in": SubResource("Animation_eg2gl"),
&"out": SubResource("Animation_xpnye")
}

[node name="PauseMenu" type="CanvasLayer"]
process_mode = 3
layer = 2
script = ExtResource("1_0lmf7")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_k541j")
}
autoplay = "in"

[node name="ColorRectOverlay" type="ColorRect" parent="."]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0.12549, 0.0313726, 0.0862745, 0.705882)

[node name="MarginContainer" type="MarginContainer" parent="."]
light_mask = 0
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="PauseMenuContainer" type="PanelContainer" parent="MarginContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
light_mask = 0
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PauseMenuContainer"]
layout_mode = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PauseMenuContainer/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 16

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/MarginContainer/PauseMenuContainer/MarginContainer/VBoxContainer"]
light_mask = 0
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"TitleLabel"
text = "Hero needs a brake?"

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/MarginContainer/PauseMenuContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 6

[node name="ResumeButton" parent="MarginContainer/VBoxContainer/MarginContainer/PauseMenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_f6eus")]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Resume"

[node name="OptionsButton" parent="MarginContainer/VBoxContainer/MarginContainer/PauseMenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_f6eus")]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Options"

[node name="QuitButton" parent="MarginContainer/VBoxContainer/MarginContainer/PauseMenuContainer/MarginContainer/VBoxContainer/VBoxContainer" instance=ExtResource("2_f6eus")]
unique_name_in_owner = true
light_mask = 0
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Quit to menu"
